# Can

./: .gitignore  CMakeLists.txt  单片机项目群.uvmpw  单片机项目群.uvmpw.uvgui.Carter  思路.txt
C/: main.c
CAN通信STC89C52RC开发MCP2515稳定版/: MCP2515.LST  NiRenMCP2515  NiRenMCP2515.M51  NiRenMCP2515.build_log.htm  NiRenMCP2515.hex  NiRenMCP2515.lnp  NiRenMCP2515.plg  NiRenMCP2515.uvgui.Carter  NiRenMCP2515.uvopt  NiRenMCP2515.uvproj  NiRenMCP2515_uvopt.bak  NiRenMCP2515_uvproj.bak  STARTUP.LST  UART.LST  UART.c  main.LST  main.c  开发后续.txt
Can/: Can.uvgui.Carter  Can.uvproj  MCP2515.c  MCP2515.h  main.c
I2CROMNumShow/: I2CROMNumShow.uvgui.Carter  I2CROMNumShow.uvopt  I2CROMNumShow.uvproj  MCP2515.h  UART.c  main.c
I2C_EEPPROM/: I2C.c  I2C_EEPPROM.uvgui.Carter  I2C_EEPPROM.uvopt  I2C_EEPPROM.uvproj  eeprom.c  main - 副本 - 副本.c  main.c
I2C_EEPPROM/Listings/: I2C.lst  I2C_EEPPROM.m51  STARTUP.lst  eeprom.lst  main - 副本 - 副本.lst  main.lst
I2C_EEPPROM/Objects/: I2C_EEPPROM  I2C_EEPPROM.build_log.htm  I2C_EEPPROM.lnp  main - 副本 - 副本.__i
I2C_Page_EEPPROM/: I2C.c  eeprom.c  main.c
MCP2515/: main.c
NewProjectMode/: ProjectName.uvproj  main.c
NumShow/: NumShow.c  NumShow.uvgui.Carter  NumShow.uvopt  NumShow.uvproj  main.c
Num_Show/: NumShow.c  main.c  project.uvgui.Carter  project.uvopt  project.uvproj
Num_Show/Listings/: NumShow.lst  STARTUP.lst  main.lst  project.m51
Num_Show/Objects/: project  project.build_log.htm  project.hex  project.lnp
UART/: UART.uvgui.Carter  UART.uvopt  main.c  test.c
new_project/: main.c  project.uvgui.Carter  project.uvopt  project.uvproj
(+6 files in other folders)
